[gd_scene load_steps=4 format=2]

[ext_resource path="res://FadeIn.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="FadeIn" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fade_in" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )

[node name="fade_out" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 2 )
[connection signal="animation_finished" from="fade_in" to="." method="_on_fade_in_animation_finished"]
[connection signal="animation_finished" from="fade_out" to="." method="_on_fade_out_animation_finished"]
